# coverage

./: README.md
annotator/: AnnotationGenerator.cpp  AnnotationGenerator.hpp  Annotator.cpp  Annotator.hpp  AnnotatorUtils.cpp  AnnotatorUtils.hpp  CMakeLists.txt  CaseAnnotator.cpp  CaseAnnotator.hpp  ForAnnotator.cpp  ForAnnotator.hpp  IfAnnotator.cpp  IfAnnotator.hpp  Makefile  WhileAnnotator.cpp  WhileAnnotator.hpp  coverage-annotator-cl.hpp  coverage-annotator.cpp
tests/: .gitignore  Makefile  if-1.c  if-2.c  if-3.c  loop-1.c  macro-1.c  simple-empty.c  switch-1.c  unreachable-1.c  unreachable-2.c  unreachable-3.c
